kubernetes/.archive/deployments/dockge/app/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: dockge
spec:
    selector:
        app: dockge
    ports:
        - name: http
          port: 5001
          targetPort: 5001
