kubernetes/.archive/deployments/dockge/app/ingress.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: dockge
    annotations:
        kubernetes.io/ingress.class: traefik
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:CA+/Jm4QvGoSud4evbxSV2T3EHhmUs4uI+s=,iv:ak6dIL2kazN9UtKwLxLkIQdeXDzOLv8suCPhFnbSnTY=,tag:LKUE+opsRqoDo7KWpWkmbA==,type:str]
          kind: Rule
          services:
            - name: dockge
              port: 5001
    tls:
        secretName: production-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1bTVTWFNrWVd2bUROcHlT
[...]
            pmibO7VExy+aERy9CTsCn9qRz01QVDWwgSc+K/O27eQqoGU38NQ8KQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-07-09T19:17:22Z"
    mac: ENC[AES256_GCM,data:Uu97HWGHsMRgbdRWYuo/XRlYRZtFeoptBb5oQbrA3eg70ygHUYcUE331yQahg7LY8ThokQ16KJzXiMlSjbO9g+MUhXQ1QvKfYOF8i6EOlIE5JgWv4Lt/cQo9WYz9G5yR4dMAkAIGs9BCjIq0GoaclbUmJ6b6//rD0MhHkuS3QH4=,iv:+dYWuwksWfBuY5Ohht6uf6Ks+ALwl6J+DI7EjvShFRo=,tag:RETULaV01OPZg85e1EIvFg==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|externalName)$
    version: 3.8.1
